# coachbench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COLOR.md  LICENSE_NOTES.md  Makefile  PLAN.md  QUALITY_REPORT.md  README.md  launch_plan.md  package.json  pyproject.toml  requirements.lock.txt
agent_garage/: parameter_glossary.json  profiles.json
agents/: __init__.py  adaptive_defense.py  adaptive_offense.py  example_agent.py  example_scouting_agent.py  exploit_probe_defense.py  exploit_probe_offense.py  model_defense.py  model_offense.py  static_defense.py  static_offense.py
arena/: README.md  __init__.py
data/: best_of_n_demo.json  calibration_eval_demo.json  comparison_report_demo.json  demo_replay.json  gauntlet_demo.json  leaderboard_demo.json  match_matrix_report.json  matchup_demo.json  mirrored_demo.json  seed_99_replay.json  tournament_demo.json  with_scouting.json
docs/: agent_garage.md  backlog.md  daily_slate.md  developer.md  episode_example.md  film_room.md  garage_audit.md  garage_audit_decisions.md  graph.md  hosted_arena_design.md  modes.md  product_plan.md  roster_budget.md  security.md  tier_0_2_access_model.md  tweak_metadata_schema.md
sandbox/: Dockerfile.agent-runner  run_agent_container.example.sh
scripts/: _evaluation.py  _path.py  build_garage_runner_matrix.py  build_replay_index.py  regenerate_golden_replays.py  run_best_of_n.py  run_budget_leaderboard.py  run_calibration_eval.py  run_comparison_report.py  run_daily_slate.py  run_eval_delta.py  run_eval_suite.py  run_gauntlet.py  run_match_matrix.py  run_matchup.py  (+4 more)
ui/: app.html  (+24 more)
(+447 files in other folders)
