[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coachbench"
version = "0.1.0"
description = "Football-inspired red-zone adversarial-agent benchmark starter."
requires-python = ">=3.10"
dependencies = ["anthropic>=0.45.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
arena = ["fastapi", "uvicorn", "httpx", "pydantic", "anthropic"]

[tool.setuptools]
package-dir = {"" = "engine"}

[tool.setuptools.packages.find]
where = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["engine", "."]
testpaths = ["tests"]
